# rust-daml-bindings

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml  rustfmt.toml
daml/: Cargo.toml
daml-bridge/: Cargo.toml  README.md
daml-bridge/src/: aliases.rs  bridge.rs  config.rs  lib.rs  main.rs  server.rs
daml-bridge/src/handler/: create_and_exercise_handler.rs  create_handler.rs  exercise_by_key_handler.rs
daml-bridge/tests/bridge/: all_json_bridge_tests.rs  mod.rs
daml-codegen/: Cargo.toml  README.md
daml-codegen/src/: error.rs  lib.rs  main.rs
daml-codegen/src/generator/: code_generator.rs  combined.rs  generator_options.rs  separate.rs
daml-codegen/src/renderer/: archive_renderer.rs  data_renderer.rs  field_renderer.rs  package_renderer.rs  render_context.rs  renderable.rs  renderer_utils.rs
daml-grpc/: Cargo.toml  README.md  build.rs
daml-grpc/resources/protobuf/: README.md
daml-grpc/src/: command_factory.rs  executor.rs  ledger_client.rs  lib.rs  nat.rs  primitive_types.rs  serialize.rs  util.rs
daml-grpc/src/data/: completion.rs  error.rs  features.rs  filter.rs  mod.rs  offset.rs  package.rs  party.rs  time_model.rs  transaction.rs
daml-grpc/src/service/: common.rs  daml_active_contracts_service.rs  daml_command_completion_service.rs  daml_command_service.rs  daml_command_submission_service.rs  daml_config_management_service.rs  daml_ledger_configuration_service.rs  daml_package_management_service.rs  daml_package_service.rs  daml_participant_pruning_service.rs  daml_reset_service.rs  daml_time_service.rs  daml_transaction_service.rs  daml_verbosity.rs  daml_version_service.rs  mod.rs
daml-grpc/tests/common/: ping_pong.rs
daml-grpc/tests/grpc/: daml_active_contract_service_tests.rs  daml_command_completion_service_tests.rs  daml_command_service_tests.rs  daml_command_submission_service_tests.rs  daml_ledger_configuration_service_tests.rs  daml_override_tests.rs  daml_package_management_service.rs  daml_package_service_tests.rs  daml_party_management_service.rs  daml_time_service_tests.rs  mod.rs
daml-lf/: Cargo.toml  README.md  build.rs
daml-lf/resources/protobuf/: README.md
daml-lf/src/: archive.rs  convert.rs  dar.rs  error.rs  lf_protobuf.rs  lib.rs  manifest.rs  payload.rs  version.rs
daml-lf/src/convert/: archive_converter.rs  archive_payload.rs  data_box_checker.rs  data_payload.rs  expr_converter.rs  expr_payload.rs  interned.rs  package_payload.rs  resolver.rs  type_payload.rs  typevar_payload.rs  util.rs
daml-lf/src/element/: daml_archive.rs  daml_data.rs  daml_defvalue.rs  daml_expr.rs  daml_field.rs  daml_module.rs  daml_package.rs  daml_type.rs  daml_typevar.rs  visitor.rs
daml-lf/test_resources/: TestingTypes-1_0_0-sdk_0_13_36-lf_1_6.dar  TestingTypes-1_0_0-sdk_1_0_0-lf_1_8.dar  TestingTypes-1_0_0-sdk_1_0_1-lf_1_8.dar  TestingTypes-1_0_0-sdk_1_1_1-lf_1_8.dar  TestingTypes-1_9_0-sdk_1_18_1-lf_1_14.dar
daml-lf/tests/: integration_tests.rs
daml-macro/: Cargo.toml  README.md
daml-macro/src/: lib.rs  path.rs  test_util.rs  value.rs
daml-util/: Cargo.toml  README.md
daml-util/src/: lib.rs  package.rs  sandbox_auth.rs
daml/src/: lib.rs  prelude.rs
daml_bridge/: Cargo.toml  README.md
daml_bridge/src/: bridge.rs  lib.rs  main.rs
daml_bridge/src/handler/: common.rs  exercise_handler.rs  packages_handler.rs  parties_handler.rs
daml_bridge/tests/: integration_tests.rs
daml_bridge/tests/bridge/: all_json_bridge_tests.rs
daml_codegen/: Cargo.toml
daml_codegen/src/: error.rs  lib.rs  main.rs  renderer.rs
daml_codegen/src/generator/: combined.rs  (+3 more)
daml_derive/: Cargo.toml
daml_derive/src/: convert.rs  generator.rs  lib.rs
daml_derive/tests/: integration_tests.rs
daml_grpc/: Cargo.toml  build.rs
daml_grpc/src/: command_factory.rs  executor.rs  grpc_protobuf.rs  ledger_client.rs  lib.rs  nat.rs  primitive_types.rs  serialize.rs  util.rs
daml_json/: Cargo.toml
daml_json/src/: data.rs  decode.rs  encode.rs  error.rs  lib.rs  openapi_data.rs  request.rs  request_converter.rs  response_converter.rs  schema_data.rs  schema_encoder.rs  service.rs  test_util.rs  util.rs  value_decode.rs  value_encode.rs
daml_ledger_api/: Cargo.toml  build.rs
daml_ledger_api/src/: .gitignore  command_factory.rs  executor.rs  grpc_protobuf.rs  ledger_client.rs  lib.rs  primitive_types.rs  sandbox_auth.rs  util.rs
daml_ledger_api/tests/: integration_tests.rs
daml_ledger_codegen/: Cargo.toml
daml_ledger_codegen/src/: convert.rs  element.rs  error.rs  generator.rs  lib.rs  main.rs  renderer.rs
daml_ledger_derive/: Cargo.toml
daml_ledger_derive/src/: generator.rs  lib.rs
daml_ledger_derive/tests/: integration_tests.rs
daml_ledger_ffi/: Cargo.toml
daml_ledger_ffi/src/: lib.rs
daml_ledger_macro/: Cargo.toml
daml_ledger_macro/src/: lib.rs  path.rs  test_util.rs  value.rs
daml_ledger_util/: Cargo.toml
daml_ledger_util/src/: lib.rs  package.rs
daml_lf/: Cargo.toml  build.rs
daml_lf/src/: .gitignore  archive.rs  convert.rs  dar.rs  element.rs  error.rs  lf_protobuf.rs  lib.rs  manifest.rs  owned.rs  package_info.rs  payload.rs  version.rs
daml_lf/test_resources/: PingPongExampleFat.dar  TestingTypes-1_0_0-sdk_0_13_55-lf_1_8.dar  TestingTypes-1_0_0-sdk_1_0_0-lf_1_8.dar  TestingTypes-1_0_0-sdk_1_1_1-lf_1_8.dar
daml_lf/tests/: integration_tests.rs
daml_macro/: Cargo.toml
daml_macro/src/: lib.rs  path.rs  value.rs
daml_util/: Cargo.toml
daml_util/src/: archive.rs  lib.rs  package.rs  sandbox_auth.rs
examples/daml-darn/: Cargo.toml  README.md
examples/daml-oas/: .datadict.yaml  .template_filter.yaml  Cargo.toml  Dockerfile  Makefile  README.md  entrypoint.sh
examples/daml2oas/: .companion.yaml  .daml2oas.yaml  .datadict.yaml  .spectral.yml  .template_filter.yaml  Cargo.toml  Makefile  README.md  entrypoint.sh
examples/daml_json_schema/: Cargo.toml  Makefile  README.md  entrypoint.sh
examples/darn/: Cargo.toml  README.md
examples/darn_dev/: Cargo.toml
examples/ping_pong_demo/: Cargo.toml  log4rs.yml
examples/rental_demo/: Cargo.toml  build.rs
sample_apps/darn/: Cargo.toml
(+715 files in other folders)
