[package]
name = "daml-codegen"
version = "0.2.0"
authors = ["FujiApple <fujiapple852@gmail.com>"]
description = "Daml GRPC Ledger API Code Generator"
readme = "README.md"
repository = "https://github.com/fujiapple852/rust-daml-bindings"
license = "Apache-2.0"
keywords = ["daml", "api", "ledger"]
categories = ["development-tools"]
edition = "2021"
rust-version = "1.59.0"

[dependencies]
daml-lf = { version = "0.2.0", path = "../daml-lf" }
quote = "1.0.15"
proc-macro2 = "1.0.36"
itertools = "0.10.3"
heck = "0.4.0"
regex = "1.2.1"
clap = { version = "3.0.14", features = [ "cargo" ] }