[package]
name = "daml-grpc"
version = "0.2.2"
authors = ["FujiApple <fujiapple852@gmail.com>"]
description = "Daml Ledger GRPC API"
readme = "README.md"
repository = "https://github.com/fujiapple852/rust-daml-bindings"
license = "Apache-2.0"
keywords = ["daml", "api", "ledger"]
categories = ["development-tools"]
edition = "2021"
rust-version = "1.59.0"
build = "build.rs"

[features]
default = [ "admin" ]
admin = []
sandbox = []

[dependencies]
futures = "0.3.21"
uuid = { version = "0.8.2", features = [ "v4" ] }
chrono = "0.4.19"
bigdecimal = "0.3.0"
bytes = "1.1.0"
tonic = { version = "0.6.2", features = [ "tls", "tls-roots" ] }
hyper = { version = "0.14.17", features = [ "full" ] } # TODO remove when tonic support connect timeout
prost = "0.9.0"
prost-derive = "0.9.0"
prost-types = "0.11.1"
async-trait = "0.1.52"
itertools = "0.10.3"
tracing = "0.1.31"

[dev-dependencies]
daml = { path = "../daml", features = [ "lf", "sandbox", "util" ] }
tokio = { version = "1.17.0", features = [ "macros" ] }
lazy_static = "1.4.0"
anyhow = "1.0.55"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.6.2"
itertools = "0.10.3"

[package.metadata.docs.rs]
all-features = true