[package]
name = "daml-lf"
version = "0.2.2"
authors = ["FujiApple <fujiapple852@gmail.com>"]
description = "API for working with Daml-LF data"
readme = "README.md"
repository = "https://github.com/fujiapple852/rust-daml-bindings"
license = "Apache-2.0"
keywords = ["daml", "api", "ledger"]
categories = ["development-tools"]
edition = "2021"
rust-version = "1.59.0"
build = "build.rs"

[features]
default = []
full = []

[dependencies]
bytes = "1.1.0"
prost = { version = "0.9.0", features = [ "no-recursion-limit" ] }
prost-derive = "0.10.1"
zip = { version = "0.6.2", default-features = false, features = [ "deflate" ] }
yaml-rust = "0.4.5"
itertools = "0.10.3"
serde = { version = "1.0.136", features = ["derive"] }
thiserror = "1.0.30"
bounded-static = { version = "0.3.0", features = [ "derive" ] }

[dev-dependencies]
trim-margin = "0.1.0"

[build-dependencies]
prost-build = "0.9.0"
itertools = "0.10.3"

[package.metadata.docs.rs]
all-features = true