[package]
name = "daml-macro"
version = "0.2.2"
authors = ["FujiApple <fujiapple852@gmail.com>"]
description = "Helper macros for working with the Daml Ledger API"
readme = "README.md"
repository = "https://github.com/fujiapple852/rust-daml-bindings"
license = "Apache-2.0"
keywords = ["daml", "macro", "api", "ledger"]
categories = ["development-tools"]
edition = "2021"
rust-version = "1.59.0"

[dependencies]
daml-grpc = { version = "0.2.2", path = "../daml-grpc" }
chrono = "0.4.19"
bigdecimal = "0.3.0"

[dev-dependencies]
daml = { path = "../daml", features = [ "grpc" ] }