[package]
name = "daml-util"
version = "0.2.2"
authors = ["FujiApple <fujiapple852@gmail.com>"]
description = "Helper utilities for working with the Daml Ledgers"
readme = "README.md"
repository = "https://github.com/fujiapple852/rust-daml-bindings"
license = "Apache-2.0"
keywords = ["daml", "api", "ledger"]
categories = ["development-tools"]
edition = "2021"
rust-version = "1.59.0"

[features]
sandbox = []

[dependencies]
daml-grpc = { version = "0.2.2", path = "../daml-grpc" }
daml-lf = { version = "0.2.2", path = "../daml-lf" }
futures = "0.3.21"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
jsonwebtoken = "8.0.1"
chrono = "0.4.19"
thiserror = "1.0.30"
itertools = "0.10.3"
uuid = "1.3.0"

[dev-dependencies]
tokio = { version = "1.17.0", features = [ "macros", "rt-multi-thread" ] }

[package.metadata.docs.rs]
all-features = true