[package]
name = "daml"
version = "0.1.0"
authors = ["FujiApple <fujiapple852@gmail.com>"]
description = "A smart contract language for building distributed applications on a safe, privacy-aware runtime"
repository = "https://github.com/fujiapple852/rust-daml-bindings"
license = "Apache-2.0"
keywords = ["daml", "api", "ledger"]
categories = ["development-tools"]
edition = "2018"

[features]
default = []
full = [ "api", "macros", "derive", "codegen", "lf_full", "util", "prelude" ]

# Enable GRPC ledger API feature.
api = [ "daml_api" ]

# Enable helper macros feature.
macros = [ "daml_macro" ]

# Enable procedural macros feature.
derive = [ "daml_derive" ]

# Enable code generator feature.
codegen = [ "daml_codegen" ]

# Enable DAML-LF feature.
lf = [ "daml_lf" ]

# Enable DAML-LF feature with support for all types
lf_full = [ "lf", "daml_lf/full" ]

# Enable additional utilities feature.
util = [ "daml_util" ]

# Enable the DAML prelude feature (required to use code produced by the code generator).
prelude = [ "daml_api", "daml_derive" ]

# Enable ledger API features which are only supported on the sandbox.
sandbox = [ "daml_api/sandbox" ]

[dependencies]
daml_api = { path = "../daml_api", optional = true }
daml_macro = { path = "../daml_macro", optional = true }
daml_lf = { path = "../daml_lf", optional = true }
daml_util = { path = "../daml_util", optional = true }
daml_derive = { path = "../daml_derive", optional = true }
daml_codegen = { path = "../daml_codegen", optional = true }
