[package]
name = "daml"
version = "0.1.0"
authors = ["FujiApple <fujiapple852@gmail.com>"]
description = "A smart contract language for building distributed applications on a safe, privacy-aware runtime"
repository = "https://github.com/fujiapple852/rust-daml-bindings"
license = "Apache-2.0"
keywords = ["daml", "api", "ledger"]
categories = ["development-tools"]
edition = "2021"
rust-version = "1.59.0"

[features]
default = []
full = [ "grpc", "json", "macros", "derive", "codegen", "lf-full", "util", "prelude" ]

# Enable ledger GRPC API feature.
grpc = [ "daml-grpc" ]

# Enable ledger JSON API feature.
json = [ "daml-json" ]

# Enable helper macros feature.
macros = [ "daml-macro" ]

# Enable procedural macros feature.
derive = [ "daml-derive" ]

# Enable code generator feature.
codegen = [ "daml-codegen" ]

# Enable Daml-LF feature.
lf = [ "daml-lf" ]

# Enable Daml-LF feature with support for all types
lf-full = [ "lf", "daml-lf/full" ]

# Enable additional utilities feature.
util = [ "daml-util" ]

# Enable the Daml prelude feature (required to use code produced by the code generator).
prelude = [ "daml-grpc", "daml-derive" ]

# Enable ledger API features which are only supported on the sandbox.
sandbox = [ "daml-util/sandbox", "daml-grpc/sandbox" ]

[dependencies]
daml-grpc = { path = "../daml-grpc", optional = true }
daml-json = { path = "../daml-json", optional = true }
daml-macro = { path = "../daml-macro", optional = true }
daml-lf = { path = "../daml-lf", optional = true }
daml-util = { path = "../daml-util", optional = true }
daml-derive = { path = "../daml-derive", optional = true }
daml-codegen = { path = "../daml-codegen", optional = true }
