[package]
name = "daml_bridge"
version = "0.1.0"
authors = ["FujiApple <fujiapple852@gmail.com>"]
description = "Daml JSON<>GRPC bridge"
repository = "https://github.com/fujiapple852/rust-daml-bindings"
license = "Apache-2.0"
keywords = ["daml", "api", "ledger"]
categories = ["development-tools"]
edition = "2018"

[dependencies]
daml_json = { path = "../daml_json" }
daml_grpc = { path = "../daml_grpc" }
daml_util = { path = "../daml_util", features = ["sandbox"] }
daml_lf = { path = "../daml_lf" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures = "0.3"
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "3", features = ["cargo"] }
humantime = "2.0"

[dev-dependencies]
daml = { path = "../daml", features = ["json", "macros", "util", "sandbox", "grpc"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
anyhow = "1.0"
lazy_static = "1.3"
parking_lot = "0.11"