[package]
name = "daml_bridge"
version = "0.1.0"
authors = ["FujiApple <fujiapple852@gmail.com>"]
description = "Daml JSON<>GRPC bridge"
repository = "https://github.com/fujiapple852/rust-daml-bindings"
license = "Apache-2.0"
keywords = ["daml", "api", "ledger"]
categories = ["development-tools"]
edition = "2018"

[dependencies]
daml_json = { path = "../daml_json" }
daml_grpc = { path = "../daml_grpc" }
daml_util = { path = "../daml_util", features = ["sandbox"] }
daml_lf = { path = "../daml_lf" }
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3.21"
warp = "0.3.2"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
bytes = "1.1.0"
thiserror = "1.0.30"
anyhow = "1.0.55"
tracing = "0.1.31"
tracing-subscriber = { version = "0.3.9", features = ["env-filter", "json"] }
clap = { version = "3.1.2", features = ["cargo"] }
humantime = "2.0.1"

[dev-dependencies]
daml = { path = "../daml", features = ["json", "macros", "util", "sandbox", "grpc"] }
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread", "time"] }
anyhow = "1.0.55"
lazy_static = "1.4.0"
parking_lot = "0.12.0"