[package]
name = "daml_codegen"
version = "0.1.0"
authors = ["FujiApple <fujiapple852@gmail.com>"]
description = "DAML Ledger Code Generator"
repository = "https://github.com/fujiapple852/rust-daml-bindings"
license = "Apache-2.0"
keywords = ["daml", "api", "ledger"]
categories = ["development-tools"]
edition = "2021"
rust-version = "1.56"

[dependencies]
daml_lf = { path = "../daml_lf" }
quote = "1.0"
proc-macro2 = "1.0"
itertools = "0.10"
heck = "0.4"
regex = "1.2"
clap = "3.0"