[package]
name = "daml_derive"
version = "0.1.0"
authors = ["FujiApple <fujiapple852@gmail.com>"]
description = "DAML Ledger Procedural Macro"
repository = "https://github.com/fujiapple852/rust-daml-bindings"
license = "Apache-2.0"
keywords = ["daml", "api", "ledger"]
categories = ["development-tools"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
daml_codegen = { path = "../daml_codegen" }
daml_lf = { path = "../daml_lf" }
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
darling = "0.10.0"
itertools = "0.9"

[dev-dependencies]
daml = { path = "../daml", features = [ "prelude", "grpc", "sandbox", "util", "macros" ] }
chrono = "0.4"
lazy_static = "1.3"
tokio = { version = "0.2", features = [ "macros" ] }
anyhow = "1.0"
