[package]
name = "daml_grpc"
version = "0.1.0"
authors = ["FujiApple <fujiapple852@gmail.com>"]
description = "DAML Ledger GRPC API"
repository = "https://github.com/fujiapple852/rust-daml-bindings"
license = "Apache-2.0"
keywords = ["daml", "api", "ledger"]
categories = ["development-tools"]
edition = "2018"
build = "build.rs"

[features]
default = [ "admin" ]
admin = []
sandbox = []

[dependencies]
futures = "0.3"
uuid = { version = "0.8", features = ["v4"] }
chrono = "0.4"
bigdecimal = "0.2"
log = "0.4"
bytes = "1"
tonic = { version = "0.4", features = [ "tls", "tls-roots" ] }
prost = "0.7"
prost-derive = "0.7"
prost-types = "0.7"
async-trait = "0.1"

[dev-dependencies]
daml = { path = "../daml", features = [ "lf", "sandbox", "util" ] }
tokio = { version = "1", features = [ "macros" ] }
lazy_static = "1.3"
anyhow = "1.0"

[build-dependencies]
tonic-build = "0.4"
itertools = "0.10"
