[package]
name = "daml_grpc"
version = "0.1.0"
authors = ["FujiApple <fujiapple852@gmail.com>"]
description = "DAML Ledger GRPC API"
repository = "https://github.com/fujiapple852/rust-daml-bindings"
license = "Apache-2.0"
keywords = ["daml", "api", "ledger"]
categories = ["development-tools"]
edition = "2021"
rust-version = "1.56"
build = "build.rs"

[features]
default = [ "admin" ]
admin = []
sandbox = []

[dependencies]
futures = "0.3"
uuid = { version = "0.8", features = [ "v4" ] }
chrono = "0.4"
bigdecimal = "0.3"
bytes = "1"
tonic = { version = "0.5", features = [ "tls", "tls-roots" ] }
hyper = { version = "0.14", features = [ "full" ] } # TODO remove when tonic support connect timeout
prost = "0.8"
prost-derive = "0.8"
prost-types = "0.8"
async-trait = "0.1"
itertools = "0.10"
tracing = "0.1"

[dev-dependencies]
daml = { path = "../daml", features = [ "lf", "sandbox", "util" ] }
tokio = { version = "1", features = [ "macros" ] }
lazy_static = "1.3"
anyhow = "1.0"
tracing-subscriber = "0.2"

[build-dependencies]
tonic-build = "0.5"
itertools = "0.10"
