[package]
name = "daml_json"
version = "0.1.0"
authors = ["FujiApple <fujiapple852@gmail.com>"]
description = "DAML Ledger JSON API"
repository = "https://github.com/fujiapple852/rust-daml-bindings"
license = "Apache-2.0"
keywords = ["daml", "api", "ledger"]
categories = ["development-tools"]
edition = "2018"

[dependencies]
daml_grpc = { path = "../daml_grpc" }
daml_lf = { path = "../daml_lf" }
reqwest = { version = "0.10", default-features = false, features = [ "json", "rustls-tls" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
bigdecimal = "0.1"
chrono = "0.4"
url = "2.1"
bytes = "0.5"

[dev-dependencies]
daml = { path = "../daml", features = [ "macros", "util" ,"sandbox", "grpc" ] }
tokio = { version = "0.2", features = [ "macros" ] }
maplit = "1.0"
anyhow = "1.0"
lazy_static = "1.3"
