[package]
name = "daml_json"
version = "0.1.0"
authors = ["FujiApple <fujiapple852@gmail.com>"]
description = "Daml Ledger JSON API"
repository = "https://github.com/fujiapple852/rust-daml-bindings"
license = "Apache-2.0"
keywords = ["daml", "api", "ledger"]
categories = ["development-tools"]
edition = "2021"
rust-version = "1.58.1"

[dependencies]
daml_grpc = { path = "../daml_grpc" }
daml_lf = { path = "../daml_lf" }
reqwest = { version = "0.11.9", default-features = false, features = [ "json", "rustls-tls" ] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0.79", features = [ "preserve_order" ] }
thiserror = "1.0.30"
bigdecimal = "0.3.0"
chrono = "0.4.19"
url = "2.1.1"
itertools = "0.10.3"
bytes = "1.1.0"
tracing = "0.1.31"

[dev-dependencies]
daml = { path = "../daml", features = [ "macros", "util" ,"sandbox", "grpc" ] }
tokio = { version = "1", features = [ "macros", "rt-multi-thread" ] }
maplit = "1.0.2"
anyhow = "1.0.55"
lazy_static = "1.4.0"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
assert-json-diff = "2.0.1"
once_cell = "1.7.2"
serde_yaml = "0.8.23"
jsonschema = { git = "https://github.com/fujiapple852/jsonschema-rs", branch = "fix-minimal-versions", default-features = false }
