[package]
name = "daml_ledger_api"
description = "DAML Ledger API"
version = "0.1.0"
authors = ["FujiApple <fujiapple852@gmail.com>"]
readme = "README.md"
keywords = ["daml", "api", "ledger"]
edition = "2018"
build = "build.rs"

[features]
default = []
testing = []
admin = []

[dependencies]
futures = "0.1"
protobuf = "2.0"
grpcio = "0.4"
uuid = { version = "0.7", features = ["v4"] }
chrono = "0.4"
time = "0.1"
bigdecimal = "0.1"
log = "0.4"
lazy_static = "1.3"
bytes = "0.4"

[dev-dependencies]
daml_lf = { path = "../daml_lf" }

[build-dependencies]
protoc-grpcio = "1.0"
itertools = "0.8"
