[package]
name = "daml_ledger_api"
description = "DAML Ledger API"
version = "0.1.0"
authors = ["FujiApple <fujiapple852@gmail.com>"]
readme = "README.md"
keywords = ["daml", "api", "ledger"]
edition = "2018"
build = "build.rs"

[features]
default = [ "admin" ]
testing = []
admin = []

[dependencies]
futures = "0.3"
uuid = { version = "0.7", features = ["v4"] }
chrono = "0.4"
time = "0.1"
bigdecimal = "0.1"
log = "0.4"
lazy_static = "1.3"
bytes = "0.5"
tonic = { version = "0.1", features = [ "tls", "tls-roots" ] }
prost = "0.6"
prost-derive = "0.6"
prost-types = "0.6"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "7"

[dev-dependencies]
daml_ledger_util = { path = "../daml_ledger_util" }
tokio = { version = "0.2", features = [ "macros" ] }

[build-dependencies]
tonic-build = "0.1"
itertools = "0.8"
