[package]
name = "daml_ledger_codegen"
version = "0.1.0"
authors = ["FujiApple <fujiapple852@gmail.com>"]
edition = "2018"

[dependencies]
daml_lf = { path = "../daml_lf" }
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
itertools = "0.9"
heck = "0.3"
regex = "1.2"
clap = "2.33"