[package]
name = "daml_ledger_derive"
version = "0.1.0"
authors = ["FujiApple <fujiapple852@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
daml_ledger_codegen = { path = "../daml_ledger_codegen" }
daml_lf = { path = "../daml_lf" }
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
darling = "0.10.0"

[dev-dependencies]
daml = { path = "../daml" }
daml_ledger_api = { path = "../daml_ledger_api", features = ["testing"] }
daml_ledger_macro = { path = "../daml_ledger_macro" }
chrono = "0.4"
time = "0.1"
lazy_static = "1.3"
