[package]
name = "daml_ledger_macro"
version = "0.1.0"
authors = ["FujiApple <fujiapple852@gmail.com>"]
description = "Helper macros for working with the DAML Ledger API"
repository = "https://github.com/fujiapple852/rust-daml-bindings"
license = "Apache-2.0"
keywords = ["daml", "macro", "api", "ledger"]
categories = ["development-tools"]
edition = "2018"

[dependencies]
daml_ledger_api = { path = "../daml_ledger_api" }
chrono = "0.4"
bigdecimal = "0.1"