[package]
name = "daml_ledger_util"
version = "0.1.0"
authors = ["FujiApple <fujiapple852@gmail.com>"]
description = "Utilities for working with the DAML Ledger API"
repository = "https://github.com/fujiapple852/rust-daml-bindings"
license = "Apache-2.0"
keywords = ["daml", "api", "ledger"]
categories = ["development-tools"]
edition = "2018"

[dependencies]
daml_ledger_api = { path = "../daml_ledger_api" }
daml_lf = { path = "../daml_lf" }
