[package]
name = "daml_lf"
version = "0.1.0"
authors = ["FujiApple <fujiapple852@gmail.com>"]
description = "API for working with DAML-LF data"
repository = "https://github.com/fujiapple852/rust-daml-bindings"
license = "Apache-2.0"
keywords = ["daml", "api", "ledger"]
categories = ["development-tools"]
edition = "2021"
rust-version = "1.56"
build = "build.rs"

[features]
default = []
full = []

[dependencies]
bytes = "1"
prost = { version = "0.8", features = [ "no-recursion-limit" ] }
prost-derive = "0.9"
zip = "0.5"
yaml-rust = "0.4"
itertools = "0.10"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
trim-margin = "0.1"

[build-dependencies]
prost-build = "0.9"
itertools = "0.10"