[package]
name = "daml_lf"
version = "0.1.0"
authors = ["FujiApple <fujiapple852@gmail.com>"]
description = "API for working with Daml-LF data"
repository = "https://github.com/fujiapple852/rust-daml-bindings"
license = "Apache-2.0"
keywords = ["daml", "api", "ledger"]
categories = ["development-tools"]
edition = "2021"
rust-version = "1.58.1"
build = "build.rs"

[features]
default = []
full = []

[dependencies]
bytes = "1.1.0"
prost = { version = "0.9.0", features = [ "no-recursion-limit" ] }
prost-derive = "0.9.0"
zip = "0.5.13"
yaml-rust = "0.4.5"
itertools = "0.10.3"
serde = { version = "1.0.136", features = ["derive"] }
thiserror = "1.0.30"
bounded-static = { version = "0.2.1", features = [ "derive" ] }

[dev-dependencies]
trim-margin = "0.1.0"

[build-dependencies]
prost-build = "0.9.0"
itertools = "0.10.3"