[package]
name = "daml_macro"
version = "0.1.0"
authors = ["FujiApple <fujiapple852@gmail.com>"]
description = "Helper macros for working with the DAML Ledger API"
repository = "https://github.com/fujiapple852/rust-daml-bindings"
license = "Apache-2.0"
keywords = ["daml", "macro", "api", "ledger"]
categories = ["development-tools"]
edition = "2021"
rust-version = "1.56"

[dependencies]
daml_grpc = { path = "../daml_grpc" }
chrono = "0.4"
bigdecimal = "0.2"

[dev-dependencies]
daml = { path = "../daml", features = [ "grpc" ] }