[package]
name = "daml_util"
version = "0.1.0"
authors = ["FujiApple <fujiapple852@gmail.com>"]
description = "Utilities for working with the Daml Ledger API"
repository = "https://github.com/fujiapple852/rust-daml-bindings"
license = "Apache-2.0"
keywords = ["daml", "api", "ledger"]
categories = ["development-tools"]
edition = "2021"
rust-version = "1.58.1"

[features]
sandbox = []

[dependencies]
daml_grpc = { path = "../daml_grpc" }
daml_lf = { path = "../daml_lf" }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "7"
chrono = "0.4"
thiserror = "1.0"
uuid = "0.8"

[dev-dependencies]
tokio = { version = "1", features = [ "macros", "rt-multi-thread" ] }
