[package]
name = "daml_util"
version = "0.1.0"
authors = ["FujiApple <fujiapple852@gmail.com>"]
description = "Utilities for working with the Daml Ledger API"
repository = "https://github.com/fujiapple852/rust-daml-bindings"
license = "Apache-2.0"
keywords = ["daml", "api", "ledger"]
categories = ["development-tools"]
edition = "2021"
rust-version = "1.59.0"

[features]
sandbox = []

[dependencies]
daml_grpc = { path = "../daml_grpc" }
daml_lf = { path = "../daml_lf" }
futures = "0.3.21"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
jsonwebtoken = "8.0.1"
chrono = "0.4.19"
thiserror = "1.0.30"
itertools = "0.10.3"
uuid = "0.8.2"

[dev-dependencies]
tokio = { version = "1", features = [ "macros", "rt-multi-thread" ] }
