[package]
name = "daml-darn"
version = "0.2.2"
authors = ["FujiApple <fujiapple852@gmail.com>"]
description = "Tools for working with Daml Archives and ledgers"
readme = "README.md"
repository = "https://github.com/fujiapple852/rust-daml-bindings"
license = "Apache-2.0"
keywords = ["daml", "api", "ledger"]
categories = ["development-tools"]
edition = "2021"
rust-version = "1.59.0"

[dependencies]
daml = { version = "0.2.2", path = "../../daml", features = [ "grpc", "sandbox", "lf-full", "util" ] }
tokio = { version = "1.17.0", features = [ "macros", "rt-multi-thread" ] }
clap = { version = "4.0.29", features = [ "cargo" ] }
prettytable-rs = "0.8.0"
itertools = "0.10.3"
anyhow = "1.0.55"
thiserror = "1.0.30"

[workspace]