[package]
name = "daml-oas"
version = "0.2.2"
authors = ["FujiApple <fujiapple852@gmail.com>"]
description = "Generate OpenAPI and AsyncAPI specification documents for the Daml JSON API from a Dar file"
readme = "README.md"
repository = "https://github.com/fujiapple852/rust-daml-bindings"
license = "Apache-2.0"
keywords = ["daml", "api", "ledger"]
categories = ["development-tools"]
edition = "2021"
rust-version = "1.59.0"

[dependencies]
daml = { version = "0.2.2", path = "../../daml", features = [ "lf-full", "json" ] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_yaml = "0.8.23"
clap = { version = "4.0.22", features = [ "cargo" ] }
anyhow = "1.0.55"
thiserror = "1.0.30"
itertools = "0.10.3"
maplit = "1.0.2"
log = "0.4.14"
simple_logger = "2.1.0"
bounded-static = "0.3.0"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'

[workspace]