[package]
name = "daml2oas"
version = "0.5.0"
authors = ["FujiApple <fujiapple852@gmail.com>"]
description = "Generate OpenAPI and AsyncAPI specification documents for the Daml JSON API from a Dar file"
edition = "2018"

[dependencies]
daml = { path = "../../daml", features = [ "lf_full", "json" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
clap = "2.33"
anyhow = "1.0"
thiserror = "1.0"
itertools = "0.10"
maplit = "1.0"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'

[workspace]