[package]
name = "daml2oas"
version = "0.5.0"
authors = ["FujiApple <fujiapple852@gmail.com>"]
description = "Generate OpenAPI and AsyncAPI specification documents for the Daml JSON API from a Dar file"
edition = "2021"
rust-version = "1.58.1"

[dependencies]
daml = { path = "../../daml", features = [ "lf_full", "json" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
clap = { version = "3.0", features = [ "cargo" ] }
anyhow = "1.0"
thiserror = "1.0"
itertools = "0.10"
maplit = "1.0"
log = "0.4"
simple_logger = "2.1"
bounded-static = "0.2.1"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'

[workspace]