[package]
name = "daml2oas"
version = "0.5.0"
authors = ["FujiApple <fujiapple852@gmail.com>"]
description = "Generate OpenAPI and AsyncAPI specification documents for the Daml JSON API from a Dar file"
edition = "2021"
rust-version = "1.58.1"

[dependencies]
daml = { path = "../../daml", features = [ "lf_full", "json" ] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_yaml = "0.8.23"
clap = { version = "3.0.14", features = [ "cargo" ] }
anyhow = "1.0.55"
thiserror = "1.0.30"
itertools = "0.10.3"
maplit = "1.0.2"
log = "0.4.14"
simple_logger = "2.1.0"
bounded-static = "0.2.1"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'

[workspace]