[package]
name = "daml_json_schema"
version = "0.1.0"
authors = ["FujiApple <fujiapple852@gmail.com>"]
description = "Tools for generating Daml JSON schemas"
edition = "2018"

[dependencies]
daml = { path = "../../daml", features = [ "lf", "json" ] }
serde_json = "1.0"
clap = "2.33"
anyhow = "1.0"
itertools = "0.10"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'

[workspace]