[package]
name = "darn"
version = "0.5.0"
authors = ["FujiApple <fujiapple852@gmail.com>"]
description = "Tools for working with DAML Archives and ledgers"
edition = "2021"
rust-version = "1.56"

[dependencies]
daml = { path = "../../daml", features = [ "grpc", "sandbox", "lf_full", "util" ] }
tokio = { version = "1", features = [ "macros", "rt-multi-thread" ] }
clap = { version = "3.0", features = [ "cargo" ] }
prettytable-rs = "0.8"
itertools = "0.10"
anyhow = "1.0"
thiserror = "1.0"

[workspace]