[package]
name = "daml-darn"
version = "0.1.1"
authors = ["FujiApple <fujiapple852@gmail.com>"]
description = "Tools for working with Daml Archives and ledgers"
edition = "2021"
rust-version = "1.59.0"

[dependencies]
daml = { version = "0.1.1", path = "../../daml", features = [ "grpc", "sandbox", "lf-full", "util" ] }
tokio = { version = "1.17.0", features = [ "macros", "rt-multi-thread" ] }
clap = { version = "3.0.14", features = [ "cargo" ] }
prettytable-rs = "0.8.0"
itertools = "0.10.3"
anyhow = "1.0.55"
thiserror = "1.0.30"

[workspace]