[package]
name = "darn_dev"
version = "0.1.0"
authors = ["FujiApple <fujiapple852@gmail.com>"]
edition = "2018"

[dependencies]
daml = { path = "../../daml", features = [ "grpc", "sandbox", "lf_full", "util" ] }
futures = "0.3"
tokio = { version = "1", features = [ "macros", "rt-multi-thread" ] }
clap = "2.33"
itertools = "0.10"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
log4rs = "0.12"
ptree = "0.2"
serde_json = "1.0"
prettytable-rs = "0.8"
uuid = { version = "0.8", features = ["v4"] }
zip = "0.5"

[workspace]