[package]
name = "ping_pong_demo"
version = "0.1.0"
authors = ["FujiApple <fujiapple852@gmail.com>"]
description = "Ping Pong demo application"
repository = "https://github.com/fujiapple852/rust-daml-bindings"
license = "Apache-2.0"
keywords = ["daml", "api", "ledger"]
categories = ["development-tools"]
edition = "2021"
rust-version = "1.58.1"

[dependencies]
daml = { path = "../../daml", features = [ "grpc", "sandbox", "util", "macros" ] }
tokio = { version = "1", features = [ "macros", "rt-multi-thread" ] }
futures = "0.3"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"

[workspace]